[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/scoreboard_scripts/screen_local_scoreboard.gd" type="Script" id=1]
[ext_resource path="res://Assets/menu/main_menu/background.png" type="Texture" id=2]
[ext_resource path="res://assets/local_scoreboard/light.png" type="Texture" id=3]
[ext_resource path="res://assets/local_scoreboard/platform.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Entities/animation_bot.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Screens/instance_scenes/scoreboard_entry.tscn" type="PackedScene" id=6]
[ext_resource path="res://themes/fonts/dpcomic.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/local_scoreboard/button_small.png" type="Texture" id=8]
[ext_resource path="res://assets/local_scoreboard/button_small_hover.png" type="Texture" id=9]
[ext_resource path="res://themes/text_dpcomic.tres" type="Theme" id=10]
[ext_resource path="res://Scenes/Screens/instance_scenes/timeout.tscn" type="PackedScene" id=11]

[node name="screen_local_scoreboard" type="Node"]

script = ExtResource( 1 )

[node name="refresh_timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="graphics" type="Node2D" parent="." index="1"]

_sections_unfolded = [ "Visibility" ]

[node name="background" type="Sprite" parent="graphics" index="0"]

texture = ExtResource( 2 )
centered = false

[node name="light" type="Sprite" parent="graphics" index="1"]

position = Vector2( 296, -19 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="platform" type="Sprite" parent="graphics" index="2"]

position = Vector2( 307, 151 )
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="animation_bot" parent="graphics" index="3" instance=ExtResource( 5 )]

position = Vector2( 340, 132 )
scale = Vector2( 2, 2 )

[node name="Light2D" type="Light2D" parent="graphics" index="4"]

position = Vector2( 342.176, 83.9789 )
enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.8
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="ui_layout" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 8.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
_sections_unfolded = [ "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="HBoxContainer" type="HBoxContainer" parent="ui_layout" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 269.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="left_margin" type="VSeparator" parent="ui_layout/HBoxContainer" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 3.0
margin_bottom = 222.0
rect_min_size = Vector2( 3, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
_sections_unfolded = [ "Rect", "Visibility", "custom_constants" ]

[node name="left_side_of_screen" type="VBoxContainer" parent="ui_layout/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_right = 269.0
margin_bottom = 222.0
rect_min_size = Vector2( 266, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="top_margin" type="HSeparator" parent="ui_layout/HBoxContainer/left_side_of_screen" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 266.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 7 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="scoreboard" type="VBoxContainer" parent="ui_layout/HBoxContainer/left_side_of_screen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 7.0
margin_right = 266.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 1
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="scoreboard_entry_up" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="0" instance=ExtResource( 6 )]

_sections_unfolded = [ "Margin", "Rect" ]
TAG_TYPE = 1

[node name="scoreboard_entry_1" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="1" instance=ExtResource( 6 )]

margin_top = 18.0
margin_bottom = 35.0

[node name="scoreboard_entry_2" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="2" instance=ExtResource( 6 )]

margin_top = 36.0
margin_bottom = 53.0

[node name="scoreboard_entry_3" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="3" instance=ExtResource( 6 )]

margin_top = 54.0
margin_bottom = 71.0

[node name="scoreboard_entry_4" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="4" instance=ExtResource( 6 )]

margin_top = 72.0
margin_bottom = 89.0

[node name="scoreboard_entry_5" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="5" instance=ExtResource( 6 )]

margin_top = 90.0
margin_bottom = 107.0

[node name="scoreboard_entry_6" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="6" instance=ExtResource( 6 )]

margin_top = 108.0
margin_bottom = 125.0

[node name="scoreboard_entry_7" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="7" instance=ExtResource( 6 )]

margin_top = 126.0
margin_bottom = 143.0

[node name="scoreboard_entry_8" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="8" instance=ExtResource( 6 )]

margin_top = 144.0
margin_bottom = 161.0

[node name="scoreboard_entry_9" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="9" instance=ExtResource( 6 )]

margin_top = 162.0
margin_bottom = 179.0

[node name="scoreboard_entry_10" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="10" instance=ExtResource( 6 )]

margin_top = 180.0
margin_bottom = 197.0

[node name="scoreboard_entry_down" parent="ui_layout/HBoxContainer/left_side_of_screen/scoreboard" index="11" instance=ExtResource( 6 )]

margin_top = 198.0
margin_bottom = 215.0
TAG_TYPE = 2

[node name="player_bot_highlight" type="VBoxContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_right = 400.0
margin_bottom = 225.0
rect_min_size = Vector2( 113, 225 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="top_margin" type="HSeparator" parent="player_bot_highlight" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 113.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/separation = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants", "custom_styles" ]

[node name="player_name" type="Label" parent="player_bot_highlight" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 20.0
margin_right = 92.0
margin_bottom = 34.0
rect_min_size = Vector2( 71, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Your Results"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "custom_colors" ]

[node name="separator" type="HSeparator" parent="player_bot_highlight" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 113.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 8 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/separation = 0
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="position" type="Label" parent="player_bot_highlight" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 42.0
margin_right = 92.0
margin_bottom = 56.0
rect_min_size = Vector2( 71, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rank: 1"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="separator2" type="HSeparator" parent="player_bot_highlight" index="4"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 113.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 8 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Visibility", "custom_constants" ]

[node name="score" type="Label" parent="player_bot_highlight" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 64.0
margin_right = 92.0
margin_bottom = 95.0
rect_min_size = Vector2( 71, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Score: 98500"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back_button" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 193.0
margin_right = 367.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
_sections_unfolded = [ "Offset", "Rect", "Size Flags", "Textures", "Theme", "Transform" ]

[node name="Label" type="Label" parent="back_button" index="0"]

modulate = Color( 0.171204, 0.172955, 0.199219, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 10 )
text = "back"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="timeout" parent="." index="5" instance=ExtResource( 11 )]

[connection signal="mouse_entered" from="back_button" to="." method="button_hover"]

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]


